# playground

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bridge.py  byok.py  byok_worker.py  pyproject.toml  server.py
.github/workflows/: space.yml
scripts/: prepare-monty-pyodide.py  test-monty-pyodide.mjs
src/playground/: __init__.py  bridge.py  byok.py  byok_worker.py  execution.py  local_runtime.py  models.py  nsjail.py  pyright.py  sandbox_worker.py  server.py  telemetry.py  worker.py  worker_process.py
src/playground/static/: adapter-client.js  app.js  index.html  kedi-editor.js  model-registry.js  pyodide-runtime.js  pyodide-worker.js  styles.css  tree-sitter-highlighter.js
src/playground/static/grammars/kedi/: highlights.scm  injections.scm  tree-sitter-kedi.wasm
src/playground/static/runtimes/: runtime.js  transformers-runtime.js  wllama-runtime.js
static/: adapter-client.js  app.js  index.html  pyodide-runtime.js  pyodide-worker.js  styles.css
static/runtimes/: runtime.js  transformers-runtime.js  wllama-runtime.js
tests/: test_playground.py
