[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kedi-playground"
version = "0.1.0"
description = "Browser-first playground for the Kedi language"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "kedi[playground]",
]

[project.scripts]
kedi-playground = "playground.server:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-cov>=5",
    "ruff>=0.15",
]

[tool.hatch.build]
include = [
    "src/playground/**/*.py",
    "src/playground/static/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/playground"]

[tool.uv.sources]
kedi = { git = "https://github.com/kedi-lang/kedi.git", branch = "kedi_playground" }

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["playground"]

[tool.coverage.report]
show_missing = true
